fix code structure in MVC format

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 langchain-groq
 langchain
 python-dotenv
-langchain-community 
+langchain-community
 flask
 flask-cors
 langchain-core
 chromadb
 sentence-transformers
-huggingface-hub
-sentence_transformers
-faiss-cpu
 langchain-huggingface
+pymongo
